examples/effects/failing/01_missing_effect_in_helper.flx
// Missing effect in an ordinary helper. Entry defaults do not make helpers ambiently effectful.

fn helper() -> Unit {
    println("missing Console")
}

fn main() {
    helper()
}
